--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ include_directories(${Boost_INCLUDE_DIRS})
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Winline")
 
-add_executable(test test.cpp)
+add_executable(tests test.cpp)
 
-target_link_libraries(test tarantool ${Boost_LIBRARIES})
+target_link_libraries(tests tarantool ${Boost_LIBRARIES})
